<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="@dimen/linear_layout_padding" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/send_sms_bomb_header"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_marginBottom="@dimen/text_view_padding_bottom" />

        <LinearLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"
                android:background="@drawable/tb_edittext_background"
                android:minHeight="@dimen/element_min_height"
                android:layout_marginRight="@dimen/edit_text_margin_right"
                android:hint="@string/phone_number_placeholder" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/browse_label"
                android:id="@+id/buttonBrowse"
                android:background="@drawable/tb_button_background"
                android:textColor="@drawable/tb_button_text_color"
                android:minHeight="@dimen/element_min_height"/>

        </LinearLayout>

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:gravity="top"
            android:background="@drawable/tb_edittext_background"
            android:minHeight="@dimen/element_min_height"
            android:hint="@string/message_placeholder"
            android:singleLine="false"
            android:lines="4"/>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:background="@drawable/tb_edittext_background"
            android:minHeight="@dimen/element_min_height"
            android:hint="@string/number_placeholder"/>

        <LinearLayout
            android:id="@+id/intervalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_margin_bottom">

            <EditText
                android:id="@+id/editTextInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"
                android:background="@drawable/tb_edittext_background"
                android:minHeight="@dimen/element_min_height"
                android:layout_marginRight="@dimen/edit_text_margin_right"
                android:hint="@string/interval_placeholder"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interval_label"
                android:id="@+id/buttonInterval"
                android:background="@drawable/tb_button_background"
                android:textColor="@drawable/tb_button_text_color"
                android:minHeight="@dimen/element_min_height"/>

        </LinearLayout>

        <Button android:id="@+id/buttonSendMessages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_sms_label"
            android:background="@drawable/tb_button_background"
            android:textColor="@drawable/tb_button_text_color"
            android:layout_marginTop="@dimen/button_margin_top"/>

    </LinearLayout>

</ScrollView>