<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true"
android:background="@drawable/tb_popup_background" >

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/linear_layout_padding" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/schedule_sms_popup_header"
        android:gravity="center"
        android:layout_marginBottom="@dimen/text_view_padding_bottom" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:id="@+id/recipientListView" />

    <Button
        android:id="@+id/buttonBrowse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_recipient_label"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/tb_button_background"
        android:textColor="@drawable/tb_button_text_color"
        android:minHeight="@dimen/element_min_height" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:gravity="top"
        android:background="@drawable/tb_edittext_background"
        android:minHeight="@dimen/element_min_height"
        android:hint="@string/message_placeholder"
        android:singleLine="false"
        android:lines="4"/>

    <Button android:id="@+id/buttonSetFirstOccurrence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_first_occurrence"
        android:background="@drawable/tb_button_background"
        android:textColor="@drawable/tb_button_text_color"
        android:layout_marginTop="@dimen/button_margin_top"/>

    <LinearLayout
        android:id="@+id/frequencyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/interval_placeholder"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:layout_marginRight="@dimen/edit_text_margin_right"
            android:paddingTop="@dimen/text_view_margin_top"
            android:paddingBottom="@dimen/text_view_margin_top"/>

        <Spinner
            android:id="@+id/frequencySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinner_margin_top"
            android:layout_weight="1" />

    </LinearLayout>

    <Button android:id="@+id/buttonScheduleMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_sms_label"
        android:background="@drawable/tb_button_background"
        android:textColor="@drawable/tb_button_text_color"
        android:layout_marginTop="@dimen/button_margin_top"/>

</LinearLayout>

</ScrollView>